# via

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix  via
src/: fifo.rs  main.rs  prompt.rs  session.rs  tail.rs
test/: mock-repl.sh  run.sh
